fix: callgraph alignment fix

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -341,6 +341,9 @@ form {
     // @at-root .tab-pane:has(&) {
     //     display: grid;
     // }
+    width: 100%;
+    height: 100%;
+    margin: auto;
     svg {
         width: 100%;
         height: 100%;
